--- a/knife4j/pom.xml
+++ b/knife4j/pom.xml
@@ -18,6 +18,7 @@
         <module>knife4j-gateway-spring-boot-starter</module>
         <module>knife4j-openapi3-webflux-spring-boot-starter</module>
         <module>knife4j-openapi3-webflux-jakarta-spring-boot-starter</module>
+        <module>knife4j-aggregation-jakarta-spring-boot-starter</module>
     </modules>
     <packaging>pom</packaging>
     <name>knife4j</name>
@@ -328,29 +329,29 @@
                         </execution>
                     </executions>
                 </plugin>
-                <plugin>
-                    <groupId>com.diffplug.spotless</groupId>
-                    <artifactId>spotless-maven-plugin</artifactId>
-                    <version>${knife4j-spotless-maven-plugin.version}</version>
-                    <configuration>
-                        <java>
-                            <eclipse>
-                                <file>src/main/resources/spotless_knife4j_formatter.xml</file>
-                            </eclipse>
-                            <licenseHeader>
-                                <file>src/main/resources/license-header</file>
-                            </licenseHeader>
-                        </java>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>apply</goal>
-                            </goals>
-                            <phase>compile</phase>
-                        </execution>
-                    </executions>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>com.diffplug.spotless</groupId>-->
+<!--                    <artifactId>spotless-maven-plugin</artifactId>-->
+<!--                    <version>${knife4j-spotless-maven-plugin.version}</version>-->
+<!--                    <configuration>-->
+<!--                        <java>-->
+<!--                            <eclipse>-->
+<!--                                <file>src/main/resources/spotless_knife4j_formatter.xml</file>-->
+<!--                            </eclipse>-->
+<!--                            <licenseHeader>-->
+<!--                                <file>src/main/resources/license-header</file>-->
+<!--                            </licenseHeader>-->
+<!--                        </java>-->
+<!--                    </configuration>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <goals>-->
+<!--                                <goal>apply</goal>-->
+<!--                            </goals>-->
+<!--                            <phase>compile</phase>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
             </plugins>
         </pluginManagement>
 
